--- a/main.html
+++ b/main.html
@@ -1,68 +1,146 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Apple Varieties Portfolio</title>
 </head>
+<style type="text/css">
+
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+  }
+
+  .main-layout {
+      display: flex;
+      justify-content: space-around;
+      margin: 20px;
+  }
+
+  .photo-container {
+      max-width: 50%;
+  }
+
+  .photo-main img {
+      width: 100%;
+  }
+
+  .photo-album ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+  }
+
+  .photo-album img {
+      width: 50px;
+      margin: 5px;
+  }
+
+  .details {
+      max-width: 40%;
+  }
+
+  .price {
+      font-size: 24px;
+      color: #4CAF50;
+  }
+
+  .variants {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+  }
+
+  .variant {
+      text-align: center;
+  }
+
+  .variant img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+  }
+
+  .description {
+      margin-top: 20px;
+  }
+
+  .add-to-cart {
+      margin-top: 20px;
+  }
+
+  button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+  }
+
+</style>
+
 
 <body>
-	<section class="product">
-		<div class="product__photo">
-			<div class="photo-container">
-				<div class="photo-main">
-					<div class="controls">
-						<i class="fa fa-share-alt"></i>
-						<i class="fa fa-heart-o"></i>
-					</div>
-					<img src="https://res.cloudinary.com/john-mantas/image/upload/v1537291846/codepen/delicious-apples/green-apple-with-slice.png"
-						alt="green apple slice">
-				</div>
-				<div class="photo-album">
-					<ul>
-						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png"
-								alt="green apple"></li>
-						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303532/codepen/delicious-apples/half-apple.png"
-								alt="half apple"></li>
-						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303160/codepen/delicious-apples/green-apple-flipped.png"
-								alt="green apple"></li>
-						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303708/codepen/delicious-apples/apple-top.png"
-								alt="apple top"></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="product__info">
-			<div class="title">
-				<h1>Delicious Apples</h1>
-				<span>CODE: 45999</span>
-			</div>
-			<div class="price">
-				R$ <span>7.93</span>
-			</div>
-			<div class="variant">
-				<h3>SELECT A COLOR</h3>
-				<ul>
-					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png"
-							alt="green apple"></li>
-					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png"
-							alt="yellow apple"></li>
-					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png"
-							alt="orange apple"></li>
-					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png"
-							alt="red apple"></li>
-				</ul>
-			</div>
-			<div class="description">
-				
-			</div>
-		</div>
-	</section>
-</body>
 
+  <div class="main-layout">
+    <div class="photo-container">
+      <div class="photo-main">
+        <img src="https://pbs.twimg.com/media/D9pie3wUEAA5Oo6?format=jpg&name=large " alt="Main Apple">
+    </div>
+    <div class="photo-album">
+        <ul>
+          <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple"></li>
+          <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="Yellow Apple"></li>
+          <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="Orange Apple"></li>
+          <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="Red Apple"></li>
+      </ul>
+  </div>
+</div>
+
+<div class="details">
+  <div class="price">$7.93</div>
+
+  <div class="variants">
+    <div class="variant">
+      <div class="color">Green</div>
+      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple Thumbnail">
+  </div>
+  <div class="variant">
+      <div class="color">Yellow</div>
+      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="Yellow Apple Thumbnail">
+  </div>
+  <div class="variant">
+      <div class="color">Orange</div>
+      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="Orange Apple Thumbnail">
+  </div>
+  <div class="variant">
+      <div class="color">Red</div>
+      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="Red Apple Thumbnail">
+  </div>
+</div>
+
+<div class="description">
+    <h2>BENEFITS</h2>
+<div type="1">
+
+    <ul >
+    <li><p>Promotes Healthy Digestion. Green apples are a good source of dietary fiber, which is essential for maintaining healthy digestion</p></li>
+    <li> <p>Reduces The Risk Of Chronic Diseases.</p></li>
+    <li> <p>Improves Heart Health</p></li>
+    <li> <p>Boosts Immune System.</p></li></ul>
+</div>
+
+</div>
+
+<div class="add-to-cart">
+    <button>ADD TO CART</button>
+</div>
+</div>
+</div>
+
+</body>
 </html>
