--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
       padding: 0;
   }
 
-  .main-layout {
+  .product__photo {
       display: flex;
       justify-content: space-around;
       margin: 20px;
@@ -86,7 +86,7 @@
 
 <body>
 
-  <div class="main-layout">
+  <div class="product__photo">
     <div class="photo-container">
       <div class="photo-main">
         <img src="https://pbs.twimg.com/media/D9pie3wUEAA5Oo6?format=jpg&name=large " alt="Main Apple">
