--- a/main.html
+++ b/main.html
@@ -104,22 +104,23 @@
 <div class="details">
   <div class="price">$7.93</div>
 
-  <div class="variants">
+  <div class="variants"><ul>
     <div class="variant">
-      <div class="color">Green</div>
-      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple Thumbnail">
+       <li><div class="color">Green</div> </li> 
+       
+      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple Thumbnail"> 
   </div>
   <div class="variant">
-      <div class="color">Yellow</div>
-      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="Yellow Apple Thumbnail">
+      <li> <div class="color">Yellow</div> </li>
+      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="Yellow Apple Thumbnail">  
   </div>
   <div class="variant">
-      <div class="color">Orange</div>
-      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="Orange Apple Thumbnail">
+    <li>  <div class="color">Orange</div> </li>
+      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="Orange Apple Thumbnail"> 
   </div>
   <div class="variant">
-      <div class="color">Red</div>
-      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="Red Apple Thumbnail">
+     <li> <div class="color">Red</div> </li>
+      <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="Red Apple Thumbnail">  </ul>
   </div>
 </div>
 
