--- a/main.html
+++ b/main.html
@@ -104,8 +104,8 @@
 <div class="details">
   <div class="price">$7.93</div>
 
-  <div class="variants"><ul>
-    <div class="variant">
+  <div class="variants">
+    <div class="variant"><ul>
        <li><div class="color">Green</div> </li> 
        
       <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple Thumbnail"> 
