--- a/main.html
+++ b/main.html
@@ -124,8 +124,8 @@
   </div>
 </div>
 
-<div class="description">
-    <h2>BENEFITS of product</h2>
+<div class="product">
+    <h2>BENEFITS</h2>
 <div type="1">
 
     <ul >
