--- a/main.html
+++ b/main.html
@@ -124,9 +124,9 @@
   </div>
 </div>
 
-<div class="product">
+<div class="description">
     <h2>BENEFITS</h2>
-<div type="1">
+<div class="product">
 
     <ul >
     <li><p>Promotes Healthy Digestion. Green apples are a good source of dietary fiber, which is essential for maintaining healthy digestion</p></li>
