--- a/main.html
+++ b/main.html
@@ -63,7 +63,12 @@
       height: 100px;
       object-fit: cover;
   }
+.variant ul{
 
+}
+.variant li{
+    
+}
   .description {
       margin-top: 20px;
   }
@@ -104,7 +109,7 @@
 <div class="details">
   <div class="price">$7.93</div>
 
-  <div class="variants">
+  <div class="variant>ul>li>img">
     <div class="variant"><ul>
        <li><div class="color">Green</div> </li> 
        
