--- a/main.html
+++ b/main.html
@@ -109,23 +109,28 @@
     <div class="details">
       <div class="price">$7.93</div>
 
-      <div class="variant>ul>li>img">
+      <div class="variants">
         <div class="variant">
-           <div class="color">Green</div>
+          
+
+
+           <div class="color">Green</div><ul>
            
-          <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple Thumbnail"> 
+         <li> <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple Thumbnail"> </li> </ul>
       </div>
-      <div class="variant">
+      <div class="variant"><ul>
           <div class="color">Yellow</div> 
-          <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="Yellow Apple Thumbnail">
+        <li>  <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="Yellow Apple Thumbnail"></li> </ul>
       </div>
-      <div class="variant">
+      <div class="variant"><ul>
          <div class="color">Orange</div>
-           <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="Orange Apple Thumbnail"> 
+      <li>     <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="Orange Apple Thumbnail"> </li> </ul>
       </div>
-      <div class="variant">
+      <div class="variant"><ul>
          <div class="color">Red</div>
-          <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="Red Apple Thumbnail">  
+      <li>    <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="Red Apple Thumbnail"> </li>  </ul>
+
+          </ul>
       </div>
     </div>
 
